# symmetries-gd

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  eslint.config.mjs  package.json  pyproject.toml  pyrightconfig.json  release.config.mjs  tsconfig.json
.github/workflows/: ci.yml  release.yml
